--- a/package.json
+++ b/package.json
@@ -51,12 +51,15 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@hms-dbmi-bgm/react-workflow-viz": "0.1.5",
     "@hms-dbmi-bgm/shared-portal-components": "git+https://github.com/4dn-dcic/shared-portal-components#0.1.45",
+    "@gmod/tabix": "^1.5.3",
+    "@gmod/vcf": "^5.0.6",
     "auth0-lock": "^11.32.2",
     "d3": "^5.16.0",
     "detect-browser": "^3.0.1",
     "date-fns": "^2.28.0",
     "domready": "^1.0.8",
     "form-serialize": "^0.7.2",
+    "generic-filehandle": "^2.2.3",
     "higlass": "1.11.8",
     "higlass-register": "^0.3.0",
     "higlass-sequence": "0.3.5",
