--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-minify-dead-code-elimination": "^0.5.1",
     "bootstrap": "^4.6.1",
+    "cypress": "^10.3.0",
     "empty-module": "0.0.2",
     "eslint": "^8.10.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -53,28 +54,28 @@
     "@hms-dbmi-bgm/shared-portal-components": "git+https://github.com/4dn-dcic/shared-portal-components#0.1.45",
     "auth0-lock": "^11.32.2",
     "d3": "^5.16.0",
-    "detect-browser": "^3.0.1",
     "date-fns": "^2.28.0",
+    "detect-browser": "^3.0.1",
     "domready": "^1.0.8",
     "form-serialize": "^0.7.2",
     "higlass": "1.11.8",
+    "higlass-bigwig-datafetcher": "0.1.2",
+    "higlass-clinvar": "0.2.3",
+    "higlass-cohort": "0.1.1",
+    "higlass-general-vcf": "0.1.1",
+    "higlass-gnomad": "0.2.1",
+    "higlass-orthologs": "0.2.3",
+    "higlass-pileup": "1.4.1",
     "higlass-register": "^0.3.0",
     "higlass-sequence": "0.3.5",
-    "higlass-transcripts": "0.3.3",
-    "higlass-text": "0.1.3",
-    "higlass-orthologs": "0.2.3",
-    "higlass-clinvar": "0.2.3",
-    "higlass-pileup": "1.4.1",
-    "higlass-gnomad": "0.2.1",
-    "higlass-general-vcf": "0.1.1",
-    "higlass-cohort": "0.1.1",
-    "higlass-bigwig-datafetcher": "0.1.2",
     "higlass-sv": "1.0.3",
+    "higlass-text": "0.1.3",
+    "higlass-transcripts": "0.3.3",
     "markdown-to-jsx": "^6.11.4",
     "memoize-one": "^5.1.1",
-    "prop-types": "^15.8.1",
     "pagedjs": "^0.2.0",
     "pixi.js": "^5.2.4",
+    "prop-types": "^15.8.1",
     "query-string": "^4.3.4",
     "react": "^17.0.2",
     "react-bootstrap": "1.6.4",
@@ -90,6 +91,6 @@
     "url": "^0.11.0"
   },
   "optionalDependencies": {
-    "cypress": "^9.5.1"
+    "cypress": "^10.3.0"
   }
 }
