--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0"
 dcicsnovault = "^5.7.0"
-dcicutils = "3.14.1.3b45" # "^3.9.0"
+dcicutils = "3.16.0.3b62"
 elasticsearch = "6.8.1"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
@@ -200,6 +200,7 @@ profiler = "encoded.commands.profiler:main"
 prepare-docker = "encoded.commands.prepare_docker:main"
 purge-item-type = "encoded.commands.purge_item_type:main"
 run-upgrade-on-inserts = "encoded.commands.run_upgrader_on_inserts:main"
+show-global-env-bucket = "encoded.commands.show_global_env_bucket:main"
 show-image-manifest = "encoded.commands.ecr_scripts:show_image_manifest_main"
 show-image-catalog = "encoded.commands.ecr_scripts:show_image_catalog_main"
 spreadsheet-to-json = "encoded.commands.spreadsheet_to_json:main"
