--- a/test.ini
+++ b/test.ini
@@ -1,9 +1,10 @@
 [app:app]
 use = config:base.ini#app
 session.secret = superlegitrealsecret
-file_upload_bucket = elasticbeanstalk-encoded-4dn-files
-blob_bucket = elasticbeanstalk-encoded-4dn-blobs
-metadata_bundles_bucket = elasticbeanstalk-fourfront-cgaplocal-test-metadata-bundles
+file_upload_bucket = cgap-unit-testing-files
+blob_bucket = cgap-unit-testing-blobs
+metadata_bundles_bucket = cgap-unit-testing-metadata-bundles
+file_wfout_bucket = cgap-unit-testing-wfout
 #blob_store_profile_name = encoded-4dn-files
 accession_factory = encoded.server_defaults.test_accession
 elasticsearch.server = 172.31.49.128:9872
