--- a/deploy/docker/local/docker_development.ini.template
+++ b/deploy/docker/local/docker_development.ini.template
@@ -17,7 +17,7 @@ load_test_only = true
 create_tables = true
 testing = true
 postgresql.statement_timeout = 20
-mpindexer = true
+mpindexer = false
 indexer = true
 indexer.namespace = cgap-docker-${USER}-test
 pyramid.reload_templates = true
@@ -37,7 +37,6 @@ s3_encrypt_key_id = ${S3_ENCRYPT_KEY_ID}
 [pipeline:debug]
 pipeline =
     egg:PasteDeploy#prefix
-    egg:repoze.debug#pdbpm
     app
 set pyramid.includes =
     pyramid_translogger
