repair remaining references, pass env bucket from config

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,6 +77,7 @@ jobs:
           TRAVIS_JOB_ID: cgap-npm-x-test-${{ github.run_number }}-
           # This will be the new environment variable name.
           TEST_JOB_ID: cgap-npm-test-${{ github.run_number }}-
+          GLOBAL_ENV_BUCKET: ${{ secrets.GLOBAL_ENV_BUCKET }}
         run: |
           # npm test
           make remote-test-npm
@@ -92,11 +93,12 @@ jobs:
           TRAVIS_JOB_ID: cgap-npm-x-test-${{ github.run_number }}-
           # This will be the new environment variable name.
           TEST_JOB_ID: cgap-npm-test-${{ github.run_number }}-
+          GLOBAL_ENV_BUCKET: ${{ secrets.GLOBAL_ENV_BUCKET }}
         run: |
-          poetry run wipe-test-indices $TEST_JOB_ID search-cgap-testing-6-8-vo4mdkmkshvmyddc65ux7dtaou.us-east-1.es.amazonaws.com:443
+          poetry run wipe-test-indices $TEST_JOB_ID search-cgap-unit-testing-6-8-2p5zrlkmxif4bayh5y6kxzlvx4.us-east-1.es.amazonaws.com:443
           # Until the next version of snovault, the following two are prudent. We can remove them soon. -kmp 9-Mar-2021
-          poetry run wipe-test-indices $TRAVIS_JOB_ID search-cgap-testing-6-8-vo4mdkmkshvmyddc65ux7dtaou.us-east-1.es.amazonaws.com:443
-          poetry run wipe-test-indices cgap-test-$TRAVIS_JOB_ID search-cgap-testing-6-8-vo4mdkmkshvmyddc65ux7dtaou.us-east-1.es.amazonaws.com:443
+          poetry run wipe-test-indices $TRAVIS_JOB_ID search-cgap-unit-testing-6-8-2p5zrlkmxif4bayh5y6kxzlvx4.us-east-1.es.amazonaws.com:443
+          poetry run wipe-test-indices cgap-test-$TRAVIS_JOB_ID search-cgap-unit-testing-6-8-2p5zrlkmxif4bayh5y6kxzlvx4.us-east-1.es.amazonaws.com:443
 
       - name: QA (UNIT)
         if: ${{ matrix.test_type == 'UNIT' }}
@@ -106,6 +108,7 @@ jobs:
           TRAVIS_JOB_ID: cgap-unit-x-test-${{ github.run_number }}-
           # This will be the new environment variable name.
           TEST_JOB_ID: cgap-unit-test-${{ github.run_number }}-
+          GLOBAL_ENV_BUCKET: ${{ secrets.GLOBAL_ENV_BUCKET }}
         run: |
           make remote-test-unit
 
@@ -117,11 +120,12 @@ jobs:
           TRAVIS_JOB_ID: cgap-unit-x-test-${{ github.run_number }}-
           # This will be the new environment variable name.
           TEST_JOB_ID: cgap-unit-test-${{ github.run_number }}-
+          GLOBAL_ENV_BUCKET: ${{ secrets.GLOBAL_ENV_BUCKET }}
         run: |
-          poetry run wipe-test-indices $TEST_JOB_ID search-cgap-testing-6-8-vo4mdkmkshvmyddc65ux7dtaou.us-east-1.es.amazonaws.com:443
+          poetry run wipe-test-indices $TEST_JOB_ID search-cgap-unit-testing-6-8-2p5zrlkmxif4bayh5y6kxzlvx4.us-east-1.es.amazonaws.com:443
           # Until the next version of snovault, the following two are prudent. We can remove them soon. -kmp 9-Mar-2021
-          poetry run wipe-test-indices $TRAVIS_JOB_ID search-cgap-testing-6-8-vo4mdkmkshvmyddc65ux7dtaou.us-east-1.es.amazonaws.com:443
-          poetry run wipe-test-indices cgap-test-$TRAVIS_JOB_ID search-cgap-testing-6-8-vo4mdkmkshvmyddc65ux7dtaou.us-east-1.es.amazonaws.com:443
+          poetry run wipe-test-indices $TRAVIS_JOB_ID search-cgap-unit-testing-6-8-2p5zrlkmxif4bayh5y6kxzlvx4.us-east-1.es.amazonaws.com:443
+          poetry run wipe-test-indices cgap-test-$TRAVIS_JOB_ID search-cgap-unit-testing-6-8-2p5zrlkmxif4bayh5y6kxzlvx4.us-east-1.es.amazonaws.com:443
 
       - name: Docker Build
         if: ${{ matrix.test_type == 'Docker' && matrix.node_version == '16' && matrix.python_version == '3.8' }}
