--- a/deploy/docker/local/docker_development.ini.template
+++ b/deploy/docker/local/docker_development.ini.template
@@ -9,10 +9,10 @@ use = config:base.ini#app
 session.secret = %(here)s/session-secret.b64
 env.name = cgap-docker-${USER}-test
 sqlalchemy.url = postgres://postgres:postgres@db:5432/postgres
-elasticsearch.server = search-cgap-testing-6-8-vo4mdkmkshvmyddc65ux7dtaou.us-east-1.es.amazonaws.com:443
+elasticsearch.server = search-cgap-unit-testing-6-8-2p5zrlkmxif4bayh5y6kxzlvx4.us-east-1.es.amazonaws.com:443
 elasticsearch.aws_auth = true
-blob_bucket = encoded-4dn-blobs
-metadata_bundles_bucket = elasticbeanstalk-fourfront-cgaplocal-dev-metadata-bundles
+blob_bucket = cgap-unit-testing-blobs
+metadata_bundles_bucket = cgap-unit-testing-metadata-bundles
 load_test_only = true
 create_tables = true
 testing = true
