--- a/development.ini
+++ b/development.ini
@@ -6,8 +6,8 @@
 [app:app]
 use = config:base.ini#app
 sqlalchemy.url = postgresql://postgres@localhost:5441/postgres?host=/tmp/snovault/pgdata
-blob_bucket = encoded-4dn-blobs
-metadata_bundles_bucket = elasticbeanstalk-fourfront-cgaplocal-dev-metadata-bundles
+blob_bucket = cgap-unit-testing-blobs
+metadata_bundles_bucket = cgap-unit-testing-metadata-bundles
 load_test_only = true
 create_tables = true
 testing = true
