Various testing changes to stabilize unit tests.

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,8 @@ addopts =
    -p snovault.tests.serverfixtures
    -p encoded.tests.personas
     --instafail
+filterwarnings =
+    ignore::DeprecationWarning: The 'warn' method is deprecated, use 'warning' instead
 markers =
     broken: mark as a test that is broken everywhere.
     es: mark a test as an elastic search test (deselect with '-m "not es"')
