--- a/test.ini.template
+++ b/test.ini.template
@@ -16,6 +16,7 @@ utils_version = 333.444.555
 eb_app_version = app-v-test-simulation
 create_tables = true
 load_test_data = encoded.loadxl:load_test_data
+env.name = $ENV_NAME
 
 [composite:indexer]
 use = config:base.ini#indexer
