--- a/test.ini.template
+++ b/test.ini.template
@@ -16,7 +16,7 @@ utils_version = 333.444.555
 eb_app_version = app-v-test-simulation
 create_tables = true
 load_test_data = encoded.loadxl:load_test_data
-env.name = ${PREPARED_TEST_ENV:~cgap-test-${USER}}
+env.name = cgap-test-${USER}
 
 [composite:indexer]
 use = config:base.ini#indexer
