--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 # Note: Various modules refer to this system as "encoded", not "cgap-portal".
 name = "encoded"
-version = "10.3.2"
+version = "11.0.0.0b0"
 description = "Clinical Genomics Analysis Platform"
 authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
 license = "MIT"
@@ -45,9 +45,9 @@ chardet = "3.0.4"
 codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0"
-dcicsnovault = "^6.0.4"
-dcicutils = "^4.2.0"
-elasticsearch = "6.8.1"
+dcicsnovault = "6.0.6.0b1"
+dcicutils = "5.0.0.1b1"
+elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
 granite-suite = "0.1.11b0"  # Needs this exact vesion until Python 3.6 support is dropped. -kmp 10-Feb-2022
@@ -78,7 +78,7 @@ pyasn1 = "0.1.9"
 PyBrowserID = "^0.14.0"
 pycparser = "2.14"
 PyJWT = "1.5.3"
-pyparsing = "^2.4.7"
+pyparsing = "^3.0.7"
 pyramid = "1.10.4"
 pyramid_localroles = ">=0.1,<1"
 pyramid-multiauth = ">=0.9.0,<1"
@@ -102,7 +102,7 @@ rutter = ">=0.3,<1"
 sentry-sdk = "^1.5.6"
 simplejson = "^3.17.0"
 SPARQLWrapper = "^1.8.5"
-SQLAlchemy = "1.3.16"  # Pinned because >=1.3.17 is broken for us (circular constraints prevent deletes)
+SQLAlchemy = "1.4.41"  # Pinned because >=1.3.17 is broken for us (circular constraints prevent deletes)
 structlog = ">=19.2.0,<20"
 #submit4dn = "0.9.7"
 subprocess-middleware = "^0.3.0"
@@ -110,19 +110,18 @@ supervisor = "^4.2.4"
 # Useful for picking apart pyproject.toml
 toml = ">=0.10.1,<1"
 tqdm = "^4.59.0"
-transaction = "^2.4.0"
+transaction = "^3.0.0"
 translationstring = "1.3"
 uptime = ">=3.0.1,<4"
 urllib3 = "^1.26.4"
 venusian = "^1.2.0"
 waitress = "^2.1.1"
-watchtower = "^1.0.6"
 WebOb = "^1.8.7"
 WebTest = "^2.0.35"
 WSGIProxy2 = "0.4.2"
 "zope.deprecation" = "^4.4.0"
 "zope.interface" = "^4.7.2"
-"zope.sqlalchemy" = "1.3"
+"zope.sqlalchemy" = "1.6"
 
 [tool.poetry.dev-dependencies]
 # PyCharm says boto3-stubs contains useful type hints
@@ -146,7 +145,7 @@ flask = ">=2.0.3"
 # https://gitmemory.com/issue/spulec/moto/2118/474917895
 # TODO: Investigate whether this bug is fixed. If it is, update the version.
 #       If not, get a reference to an open bug report here so we can check back periodically.
-moto = "1.3.7"
+moto = "4.0.3"
 pip-licenses = "^3.3.1"
 pipdeptree = "^2.1.0"
 # TODO: Investigate whether a major version upgrade is allowable for 'pytest', which is several versions behind.
@@ -157,7 +156,6 @@ pytest-instafail = ">=0.3.0"
 pytest-mock = ">=0.11.0"
 pytest-timeout = ">=1.0.0"
 pytest-xdist = ">=1.14"
-
 wheel = ">=0.29.0"
 
 
