Add a static checks workflow

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,8 @@ addopts =
    -p snovault.tests.serverfixtures
    -p encoded.tests.personas
     --instafail
+filterwarnings =
+    ignore::DeprecationWarning: The 'warn' method is deprecated, use 'warning' instead
 markers =
     broken: mark as a test that is broken everywhere.
     es: mark a test as an elastic search test (deselect with '-m "not es"')
@@ -20,6 +22,7 @@ markers =
     sloppy: mark a test as using poor data hygiene (leaving garbage behind that may adversely affect other tests)
     slow: mark a test as slow (deselect with '-m "not slow"')
     storage: mark a test as about storage (deselect with '-m "not storage"')
+    static: mark as a test that is testing the static form of code, not its runtime functionality
     triage: mark a test as something that needs working/broken triage.
     unit: a proper unit test
     workbook: mark a test as using the 'workbook' fixture (so tests can split 'workbook' from 'not workbook')
