--- a/.github/workflows/static-checks.yml
+++ b/.github/workflows/static-checks.yml
@@ -28,12 +28,6 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.7
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
       - name: Python Package Setup
         run: |
           make configure
@@ -41,11 +35,7 @@ jobs:
       - name: Static Checks
         env:
           NO_SERVER_FIXTURES: TRUE
-          S3_ENCRYPT_KEY: ${{ secrets.S3_ENCRYPT_KEY }}
-          # This variable should not get used, but it's here for separation "just in case"
-          TEST_JOB_ID: cgap-static-test-${{ github.run_number }}-
-          GLOBAL_ENV_BUCKET: ${{ secrets.GLOBAL_ENV_BUCKET }}
-          ACCOUNT_NUMBER: $ {{ secrets.ACCOUNT_NUMBER }}
+          NO_ENVUTILS_INIT: TRUE
         run: |
           make test-static
           make lint
