--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0"
 dcicsnovault = "^6.0.8"
-dcicutils = "5.1.0.2b2"
+dcicutils = "^5.2.0"
 elasticsearch = "6.8.1"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
