--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<3.9"
+python = ">=3.8.1,<3.9"
 awscli = ">=1.25.36"
 boto3 = "^1.24.36"
 botocore = "^1.27.36"
@@ -45,8 +45,8 @@ chardet = "3.0.4"
 codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0"
-dcicsnovault = "6.0.6.0b2"
-dcicutils = "5.0.0.1b1"
+dcicsnovault = "^7.0.0"
+dcicutils = "^6.0.0"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
