Revert "more library bumps"
This reverts commit 71a47c03c64446f3a55aa17ee802ea6151496601.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,10 +37,10 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.9"
-awscli = ">=1.25.90"
-boto3 = "^1.24.89"
-botocore = "^1.27.89"
-certifi = ">=2022.9.24"
+awscli = ">=1.25.36"
+boto3 = "^1.24.36"
+botocore = "^1.27.36"
+certifi = ">=2021.5.30"
 chardet = "3.0.4"
 codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
@@ -55,8 +55,8 @@ h5py = "2.10.0"  # Needs this exact vesion until Python 3.6 support is dropped. 
 # html5lib = "0.9999999"
 humanfriendly = "^1.44.9"
 hupper = "1.5"
-idna = "^2.10"
-isodate = "^0.6.1"
+idna = ">=2.10,<3"
+isodate = "0.5.4"
 jmespath = "0.9.0"
 jsonschema_serialize_fork = "^2.1.1"
 keepalive = "0.5"
@@ -71,8 +71,8 @@ pbkdf2 = "1.3"
 # Pillow = "^6.2.2"
 plaster = "1.0"
 plaster-pastedeploy = "0.6"
-psutil = "^5.9.2"
-psycopg2-binary = "^2.9.4"
+psutil = "^5.9.0"
+psycopg2-binary = "^2.9.3"
 py = ">=1.10.0"  # used by pytest, not sure if elsewhere
 pyasn1 = "0.1.9"
 PyBrowserID = "^0.14.0"
@@ -88,12 +88,12 @@ pyramid_translogger = "^0.1"
 python-dateutil = "^2.8.2"
 # python-magic is presently pinned to 0.4.15 in lockstep with dcicsnovault's requirements. See explanation there.
 python_magic = ">=0.4.24,<1"
-pytz = ">=2022.4"
+pytz = ">=2021.3"
 rdflib = "^4.2.2"
 rdflib-jsonld = ">=0.5.0,<1.0.0"
 # repoze.debug is needed to use pyramid.pserve - Will Feb 17 2022
 "repoze.debug" = ">=1.0.2"
-requests = "^2.26.0"
+requests = "^2.23.0"
 rfc3986 = "^1.4.0"
 rsa = "3.3"
 rutter = ">=0.3,<1"
@@ -109,12 +109,11 @@ subprocess-middleware = "^0.3.0"
 supervisor = "^4.2.4"
 # Useful for picking apart pyproject.toml
 toml = ">=0.10.1,<1"
-tqdm = "^4.64.1"
+tqdm = "^4.59.0"
 transaction = "^3.0.0"
 translationstring = "1.3"
-typing-extensions = "^4.4.0"
 uptime = ">=3.0.1,<4"
-urllib3 = "^1.26.12"
+urllib3 = "^1.26.4"
 venusian = "^1.2.0"
 waitress = "^2.1.1"
 WebOb = "^1.8.7"
@@ -126,20 +125,20 @@ WSGIProxy2 = "0.4.2"
 
 [tool.poetry.dev-dependencies]
 # PyCharm says boto3-stubs contains useful type hints
-boto3-stubs = "^1.24.89"
-botocore-stubs = "^1.27.89"
-coverage = ">=6.5.0"
+boto3-stubs = "^1.24.36"
+botocore-stubs = "^1.27.36"
+coverage = ">=6.2"
 codacy-coverage = ">=1.3.11"
 coveralls = ">=3.3.1"
 docutils = ">=0.16,<1"
-flake8 = ">=3.9.2"
+flake8 = ">=3.9.0"
 flaky = ">=3.7.0"
 # flask only for moto[server]
 flask = ">=2.0.3"
 # Upon removal of moto[server] we seem to be able to tolerate newer moto versions
 moto = "4.0.3"
-pip-licenses = "^3.5.1"
-pipdeptree = "^2.3.1"
+pip-licenses = "^3.3.1"
+pipdeptree = "^2.1.0"
 # TODO: Investigate whether a major version upgrade is allowable for 'pytest', which is several versions behind.
 pytest = ">=3.10,<4"
 pytest-cov = ">=2.2.1"
