--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@hms-dbmi-bgm/react-workflow-viz": "0.1.5",
+    "@gmod/tabix": "^1.5.3",
+    "@gmod/vcf": "^5.0.6",
     "@hms-dbmi-bgm/shared-portal-components": "git+https://github.com/4dn-dcic/shared-portal-components#0.1.52",
     "auth0-lock": "^11.33.0",
     "d3": "^5.16.0",
@@ -57,19 +59,20 @@
     "detect-browser": "^3.0.1",
     "domready": "^1.0.8",
     "form-serialize": "^0.7.2",
+    "generic-filehandle": "^2.2.3",
     "higlass": "1.11.8",
-    "higlass-bigwig-datafetcher": "0.1.2",
-    "higlass-clinvar": "0.2.3",
-    "higlass-cohort": "0.1.1",
-    "higlass-general-vcf": "0.1.1",
-    "higlass-gnomad": "0.2.1",
-    "higlass-orthologs": "0.2.3",
-    "higlass-pileup": "1.4.1",
     "higlass-register": "^0.3.0",
     "higlass-sequence": "0.3.5",
-    "higlass-sv": "1.0.3",
-    "higlass-text": "0.1.3",
     "higlass-transcripts": "0.3.3",
+    "higlass-text": "0.1.3",
+    "higlass-orthologs": "0.2.3",
+    "higlass-clinvar": "0.2.3",
+    "higlass-pileup": "1.4.1",
+    "higlass-gnomad": "0.2.1",
+    "higlass-general-vcf": "0.1.1",
+    "higlass-cohort": "0.2.2",
+    "higlass-bigwig-datafetcher": "0.1.2",
+    "higlass-sv": "1.0.3",
     "markdown-to-jsx": "^6.11.4",
     "memoize-one": "^5.1.1",
     "pagedjs": "^0.2.0",
