--- a/package.json
+++ b/package.json
@@ -68,11 +68,11 @@
     "higlass-orthologs": "0.2.4",
     "higlass-clinvar": "0.2.5",
     "higlass-pileup": "1.4.1",
-    "higlass-gnomad": "0.2.1",
-    "higlass-general-vcf": "0.1.1",
-    "higlass-cohort": "0.2.2",
+    "higlass-gnomad": "0.2.2-beta.1",
+    "higlass-general-vcf": "0.1.2-beta.1",
+    "higlass-cohort": "0.2.1-beta.0",
     "higlass-bigwig-datafetcher": "0.1.2",
-    "higlass-sv": "1.0.3",
+    "higlass-sv": "1.0.4-beta.0",
     "markdown-to-jsx": "^6.11.4",
     "memoize-one": "^5.1.1",
     "pagedjs": "^0.2.0",
