--- a/pyproject.toml
+++ b/pyproject.toml
@@ -139,18 +139,16 @@ flask = ">=2.0.3"
 moto = "4.0.3"
 pip-licenses = "^3.3.1"
 pipdeptree = "^2.1.0"
-# TODO: Investigate whether a major version upgrade is allowable for 'pytest', which is several versions behind.
-pytest = "4.5.0"  # ">=3.10,<4"
-pytest-cov = ">=2.2.1"
-pytest-exact-fixtures = ">=0.3"
-pytest-instafail = ">=0.4.1"
-pytest-mock = ">=3.1.0"
-pytest-timeout = ">=1.3.4"
-pytest-xdist = ">=1.14"
+pytest = ">=7.2.1"
+pytest-cov = ">=4.0.0"  # ">=2.9.0"
+pytest-instafail = ">=0.4.2"
+pytest-mock = ">=3.10.0"  # ">=3.2.0"
+pytest-timeout = ">=2.1.0"  # ">=1.4.2"
+pytest-xdist = "3.1.0"  # ">=1.34.0"
 wheel = ">=0.29.0"
 
 
-# In pytest 6.0, we'll be able to use this instead of a separate pytest.ini configuration.
+# TODO: Now that we're above pytest 6.0, we can use this instead of a separate pytest.ini configuration.
 # -kmp 18-Jan-2021
 #
 # [tool.pytest.ini_options]
