--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0"
 dcicsnovault = "^7.1.0"
-dcicutils = "^6.0.0"
+dcicutils = "6.5.0.1b1"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
