Updated cohort browser

--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "detect-browser": "^3.0.1",
     "domready": "^1.0.8",
     "form-serialize": "^0.7.2",
-    "generic-filehandle": "^2.2.3",
-    "higlass": "1.11.11",
+    "generic-filehandle": "^3.0.0",
+    "higlass": "1.12.0",
     "higlass-register": "^0.3.0",
     "higlass-sequence": "0.4.2",
     "higlass-transcripts": "0.3.8",
@@ -70,7 +70,7 @@
     "higlass-pileup": "1.4.1",
     "higlass-gnomad": "0.2.2-beta.1",
     "higlass-general-vcf": "0.1.2-beta.1",
-    "higlass-cohort": "0.2.3",
+    "higlass-cohort": "0.3.3-beta.0",
     "higlass-bigwig-datafetcher": "0.1.2",
     "higlass-sv": "1.0.4-beta.0",
     "markdown-to-jsx": "^6.11.4",
