--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,6 +102,7 @@ rutter = ">=0.3,<1"
 # We don't use this directly. It's part of boto3. It slows down solving to pin.
 # s3transfer = ">=0.3.7,<0.4.0"
 sentry-sdk = "^1.5.6"
+setuptools = "57.5.0"  # this version allows 2to3, any later will break -wrr 20-Sept-2021 (moved here from Makefile 2023-02-15)
 simplejson = "^3.17.0"
 SPARQLWrapper = "^1.8.5"
 SQLAlchemy = "1.4.41"  # Pinned because >=1.3.17 is broken for us (circular constraints prevent deletes)
