--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,7 @@ pyramid-multiauth = ">=0.9.0,<1"
 pyramid-retry = "^1.0"
 pyramid-tm = "^2.4"
 pyramid_translogger = "^0.1"
+pysam = "^0.20.0"
 python-dateutil = "^2.8.2"
 # python-magic is presently pinned to 0.4.15 in lockstep with dcicsnovault's requirements. See explanation there.
 python_magic = ">=0.4.24,<1"
