--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 # Note: Various modules refer to this system as "encoded", not "cgap-portal".
 name = "encoded"
-version = "12.8.3"
+version = "12.8.4"
 description = "Computational Genome Analysis Platform"
 authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
 license = "MIT"
@@ -51,7 +51,7 @@ elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
 granite-suite = "0.1.11b0"  # Needs this exact vesion until Python 3.6 support is dropped. -kmp 10-Feb-2022
-h5py = "2.10.0"  # Needs this exact vesion until Python 3.6 support is dropped. -kmp 10-Feb-2022
+h5py = "^3.6.0"  # Needs this exact vesion until Python 3.6 support is dropped. -kmp 10-Feb-2022
 # html5lib = "0.9999999"
 humanfriendly = "^1.44.9"
 hupper = "1.5"
@@ -63,7 +63,7 @@ keepalive = "0.5"
 loremipsum = "1.0.5"
 netaddr = ">=0.8.0,<1"
 negspy = "0.2.24"
-numpy = "1.19.1" # negspy needs it
+numpy = "^1.24.1" # negspy needs it
 openpyxl = "^3.0.7,!=3.0.8"  # a version 3.0.8 appeared but then got withdrawn, for now just pin 3.0.7. try again later.
 passlib = "^1.7.4"
 PasteDeploy = "1.5.2"
@@ -85,6 +85,7 @@ pyramid-multiauth = ">=0.9.0,<1"
 pyramid-retry = "^1.0"
 pyramid-tm = "^2.4"
 pyramid_translogger = "^0.1"
+pysam = "^0.20.0"
 python-dateutil = "^2.8.2"
 # python-magic is presently pinned to 0.4.15 in lockstep with dcicsnovault's requirements. See explanation there.
 python_magic = ">=0.4.24,<1"
@@ -100,6 +101,7 @@ rutter = ">=0.3,<1"
 # We don't use this directly. It's part of boto3. It slows down solving to pin.
 # s3transfer = ">=0.3.7,<0.4.0"
 sentry-sdk = "^1.5.6"
+setuptools = "57.5.0"  # this version allows 2to3, any later will break -wrr 20-Sept-2021
 simplejson = "^3.17.0"
 SPARQLWrapper = "^1.8.5"
 SQLAlchemy = "1.4.41"  # Pinned because >=1.3.17 is broken for us (circular constraints prevent deletes)
