Debug GA changes. Updated dcicpyvcf to 1.0.0.1b0.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ certifi = ">=2021.5.30"
 chardet = "3.0.4"
 codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
-dcicpyvcf = "1.0.0"
+dcicpyvcf = "1.0.0.1b0"
 dcicsnovault = "^7.1.0"
 dcicutils = "^6.8.0"
 elasticsearch = "7.13.4"
