--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,14 +37,14 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.9"
-awscli = ">=1.25.36"
-boto3 = "^1.24.36"
-botocore = "^1.27.36"
+awscli = ">=1.27.79"
+boto3 = "^1.26.79"
+botocore = "^1.29.79"
 certifi = ">=2021.5.30"
 chardet = "3.0.4"
 codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
-dcicpyvcf = "1.0.0"
+dcicpyvcf = "^1.0.0"
 dcicsnovault = "^7.1.0"
 dcicutils = "^6.8.0"
 elasticsearch = "7.13.4"
@@ -56,8 +56,8 @@ h5py = "2.10.0"  # Needs this exact vesion until Python 3.6 support is dropped. 
 humanfriendly = "^1.44.9"
 hupper = "1.5"
 idna = ">=2.10,<3"
-isodate = "0.5.4"
-jmespath = "0.9.0"
+isodate = ">=0.6.1,<1"
+jmespath = ">=0.10.0,<1"
 jsonschema_serialize_fork = "^2.1.1"
 keepalive = "0.5"
 loremipsum = "1.0.5"
@@ -125,8 +125,8 @@ WSGIProxy2 = "0.4.2"
 
 [tool.poetry.dev-dependencies]
 # PyCharm says boto3-stubs contains useful type hints
-boto3-stubs = "^1.24.36"
-botocore-stubs = "^1.27.36"
+boto3-stubs = "^1.26.79"
+botocore-stubs = "^1.29.79"
 coverage = ">=6.2"
 codacy-coverage = ">=1.3.11"
 coveralls = ">=3.3.1"
