--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ certifi = ">=2021.5.30"
 chardet = "3.0.4"
 codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
-dcicpyvcf = "^1.0.0"
+dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
 dcicsnovault = "^7.1.0"
 dcicutils = "^6.8.0"
 elasticsearch = "7.13.4"
@@ -59,7 +59,7 @@ idna = ">=2.10,<3"
 isodate = ">=0.6.1,<1"
 jmespath = ">=0.10.0,<1"
 jsonschema_serialize_fork = "^2.1.1"
-keepalive = "0.5"
+# keepalive = ">=0.5,<1"
 loremipsum = "1.0.5"
 netaddr = ">=0.8.0,<1"
 negspy = "0.2.24"
