--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,9 +44,9 @@ certifi = ">=2021.5.30"
 chardet = "3.0.4"
 codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
-dcicpyvcf = "1.0.0"
-dcicsnovault = "7.1.1.1b0"  # "^7.1.1"
-dcicutils = "^6.8.0"
+dcicpyvcf = "1.0.0.1b0"
+dcicsnovault = "7.2.1.1b0"  # to become "^7.3.0" when snovault PR #248 is merged
+dcicutils = "^6.10.0"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
 future = ">=0.18.2,<1"
@@ -56,7 +56,7 @@ h5py = "2.10.0"  # Needs this exact vesion until Python 3.6 support is dropped. 
 humanfriendly = "^1.44.9"
 hupper = "1.5"
 idna = ">=2.10,<3"
-isodate = "0.5.4"
+isodate = ">=0.5.4,<1"
 jmespath = "0.9.0"
 jsonschema_serialize_fork = "^2.1.1"
 keepalive = "0.5"
