--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ chardet = "3.0.4"
 codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"
-dcicsnovault = "7.2.1.1b0"  # to become "^7.3.0" when snovault PR #248 is merged
+dcicsnovault = "7.2.1.1b2"  # to become "^7.3.0" when snovault PR #248 is merged
 dcicutils = "^6.10.0"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
@@ -120,7 +120,7 @@ WebOb = "^1.8.7"
 WebTest = "^2.0.35"
 WSGIProxy2 = "0.4.2"
 "zope.deprecation" = "^4.4.0"
-"zope.interface" = "^4.7.2"
+"zope.interface" = ">=4.7.2,<6"
 "zope.sqlalchemy" = "1.6"
 
 [tool.poetry.dev-dependencies]
