--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ idna = ">=2.10,<3"
 isodate = ">=0.5.4,<1"
 jmespath = "0.9.0"
 jsonschema_serialize_fork = "^2.1.1"
-keepalive = "0.5"
+# keepalive = "0.5"
 loremipsum = "1.0.5"
 netaddr = ">=0.8.0,<1"
 negspy = "0.2.24"
