--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ chardet = "3.0.4"
 codeguru-profiler-agent = "^1.2.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
-dcicsnovault = "^7.1.0"
+dcicsnovault = "7.2.1.1b3" # "^7.1.0"
 dcicutils = "^6.8.0"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
@@ -142,7 +142,7 @@ pipdeptree = "^2.1.0"
 # TODO: Investigate whether a major version upgrade is allowable for 'pytest', which is several versions behind.
 pytest = ">=3.10,<4"
 pytest-cov = ">=2.2.1"
-pytest-exact-fixtures = ">=0.3"
+# pytest-exact-fixtures = ">=0.3"
 pytest-instafail = ">=0.3.0"
 pytest-mock = ">=0.11.0"
 pytest-timeout = ">=1.0.0"
