--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    name: Test Suite for cgap-portal (Python 3.8, Node 16)
+    name: cgap-portal (KIND, PY, NODE) =
 
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
@@ -74,14 +74,14 @@ jobs:
           # Once the new snovault is in, we should retain these for a little while to make sure the right
           # variable is being used, and then this can go away. -kmp 9-Mar-2021
           # I have named the ID slightly differently so we can see if the old names are in use.
-          TRAVIS_JOB_ID: cgap-indexing-x-test-${{ github.run_number }}-
+          TRAVIS_JOB_ID: cgap-idx-x-test-${{ github.run_number }}-
           # This will be the new environment variable name.
-          TEST_JOB_ID: cgap-indexing-test-${{ github.run_number }}-
+          TEST_JOB_ID: cgap-idx-test-${{ github.run_number }}-
           GLOBAL_ENV_BUCKET: ${{ secrets.GLOBAL_ENV_BUCKET }}
           ACCOUNT_NUMBER: $ {{ secrets.ACCOUNT_NUMBER }}
         run: |
-          # npm test
           make remote-test-indexing
+          make remote-test-npm
 
       - name: Cleanup (INDEXING)
         if: ${{ always() && matrix.test_type == 'INDEXING' }}
@@ -91,9 +91,9 @@ jobs:
           # Once the new snovault is in, we should retain these for a little while to make sure the right
           # variable is being used, and then this can go away. -kmp 9-Mar-2021
           # I have named the ID slightly differently so we can see if the old names are in use.
-          TRAVIS_JOB_ID: cgap-indexing-x-test-${{ github.run_number }}-
+          TRAVIS_JOB_ID: cgap-idx-x-test-${{ github.run_number }}-
           # This will be the new environment variable name.
-          TEST_JOB_ID: cgap-indexing-test-${{ github.run_number }}-
+          TEST_JOB_ID: cgap-idx-test-${{ github.run_number }}-
           GLOBAL_ENV_BUCKET: ${{ secrets.GLOBAL_ENV_BUCKET }}
           ACCOUNT_NUMBER: $ {{ secrets.ACCOUNT_NUMBER }}
         run: |
