--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# Build for cgap-portal
+# Main python test suite for cgap-portal
 
 name: CI
 
@@ -17,7 +17,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    name: cgap-portal (KIND, PY, NODE) =
+    name: cgap-portal tests
 
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
